<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecat_pkg</name>
  <version>0.0.2</version>
  <description>ROS2 EtherCAT Node Development Stage</description>
  <maintainer email="veysi.adin@kist.re.kr">veysiadn</maintainer>
  <license>General Public Licence 3.0</license>
	<!--Below part is defualt -->
  <buildtool_depend>ament_cmake</buildtool_depend>
	<!--You have to add build dependencies to xml file-->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>ecat_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tlsf_cpp</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
<!--You have to add execution dependencies to xml file-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>ecat_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tlsf_cpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
