<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_pkg</name>
  <version>0.0.1</version>
  <description>
     EtherCAT Node GUI to show motor parameters.
  </description>
  <maintainer email="veysi.adin@kist.re.kr">Veysi ADIN</maintainer>
  <license>General Public Licence 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--QT-->
  <build_depend>qtbase5-dev</build_depend>
  <!--ROS2-->
  <build_depend>cv_bridge</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ecat_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ecat_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>

</package>
